objects/Engineering_Milestone__c.object
<CustomObject>
    <description>This object contains the different project gates and the defined timelines out of PLM.</description>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Contains the external key, built from PLM Id and Gate.
e.g. PLM Id + &apos;|&apos; + &apos;PROJECT_START&apos;;</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gate_Ordered__c</fullName>
        <formula>CASE(TEXT(Gate__c),
&quot;Definition Completion (G1)&quot;, &quot;1. Definition Completion (G1)&quot;,
&quot;Concept Completion (G2)&quot;, &quot;2. Concept Completion (G2)&quot;,
&quot;Design Completion (G3)&quot;, &quot;3. Design Completion (G3)&quot;, 
&quot;Validation Completion (G4)&quot;, &quot;4. Validation Completion (G4)&quot;, 
&quot;Industrialize Completion (G5)&quot;, &quot;5. Industrialize Completion (G5)&quot;, 
&quot;Production Completion (G6)&quot;, &quot;6. Production Completion (G6)&quot;,
&quot;Project Start&quot;, &quot;0. Project Start&quot;,
&quot;Launch Date&quot;, &quot;7. Launch Date&quot;,
&quot;Project Completion&quot;, &quot;8. Project Completion&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Define Short help text per milestone</inlineHelpText>
        <label>Gate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gate__c</fullName>
        <label>Gate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Definition Completion (G1)</fullName>
                </value>
                <value>
                    <fullName>Concept Completion (G2)</fullName>
                </value>
                <value>
                    <fullName>Design Completion (G3)</fullName>
                </value>
                <value>
                    <fullName>Validation Completion (G4)</fullName>
                </value>
                <value>
                    <fullName>Industrialize Completion (G5)</fullName>
                </value>
                <value>
                    <fullName>Production Completion (G6)</fullName>
                </value>
                <value>
                    <fullName>Project Start</fullName>
                </value>
                <value>
                    <fullName>Launch Date</fullName>
                </value>
                <value>
                    <fullName>Project Completion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Engineering Milestones</relationshipLabel>
        <relationshipName>Engineering_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Engineering_Milestone__c</referenceTo>
        <relationshipLabel>Engineering Milestones</relationshipLabel>
        <relationshipName>Engineering_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned__c</fullName>
        <label>Planned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revised__c</fullName>
        <label>Revised</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This formula field compares given milestone dates and shows green, amber, red flages.</description>
        <formula>IF(
	AND(Customer__c &gt;= Planned__c, Revised__c &lt;= Planned__c, Planned__c &lt;= Customer__c), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;),
		IF(
			AND(Planned__c &lt; Revised__c, Revised__c &lt;= Customer__c), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;),
				IF(
					AND(Revised__c &gt; Customer__c, Planned__c &gt; Customer__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;), &quot;&quot;
				)
		)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,IMAGE(&quot;/img/icon/tasks16.gif&quot;,&quot;View&quot;),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Engineering Milestone</label>
    <nameField>
        <displayFormat>EM-{000000}</displayFormat>
        <label>Engineering Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engineering Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>